@@ -1,3 +1,7 @@
+2008-07-11  Tom Tromey  <tromey@redhat.com>
+
+	* gdb.base/completion.exp: Add 'help' completion test.
+
 2008-07-10  Jan Kratochvil  <jan.kratochvil@redhat.com>
 
 	* gdb.base/randomize.exp: Remove dependency on tcl-8.4+.
